# ros2_hybrid_bundle

./: .gitignore  README.md  one_click.sh  progress_update_ppt.html  progress_update_speaker_notes.md  raw_speed_intent_refine.m  run_abort_tuning_compare.sh  run_offline_debug.sh  upgrade.md
evaluation/optimized_rrt_20260607_170810/: evaluation_summary_20260607_171103.csv  evaluation_summary_20260607_171103.json
evaluation_inputs/: offline_eval_input_20260607_031335.json  offline_eval_input_20260607_032538.json  offline_eval_input_20260607_033033.json  offline_eval_input_20260607_044013.json  offline_eval_input_20260607_044228.json  offline_eval_input_20260607_045915.json  offline_eval_input_20260607_052244.json  offline_eval_input_20260607_134602.json  offline_eval_input_20260607_150454.json  offline_eval_input_20260607_170810.json  offline_eval_input_20260607_171851.json  offline_eval_input_20260608_152101.json  offline_eval_input_20260608_184902.json  offline_eval_input_20260614_162300.json  offline_eval_input_20260614_162619.json  offline_eval_input_latest.json
func/: fuzregre_modulation_yout.m
intent_hybrid_interfaces/: CMakeLists.txt  package.xml
intent_hybrid_interfaces/srv/: CheckMotionBatch.srv  CheckStatesBatch.srv  DispatchJointTrajectory.srv  PlanLocalSegment.srv  PublishPlanningMarkers.srv
intent_hybrid_planner/: package.xml  setup.cfg  setup.py
intent_hybrid_planner/config/: eval_scenarios_minimal.json  obstacles_default.json
intent_hybrid_planner/intent_hybrid_planner/: __init__.py  ee_trace_marker_node.py  fmp_core.py  fmp_via_test_node.py  fmp_via_validation.py  hybrid_matlab_compat.py  intent_biased_rrt.py  intent_hybrid_evaluator.py  intent_hybrid_planner_node.py  offline_debug_recorder.py  plot_planning_vis_snapshot.py  run_plan_and_eval.py  spawn_obstacles.py
intent_hybrid_planner/resource/: intent_hybrid_planner
intent_hybrid_planner/sdf/: obstacles.sdf
intent_hybrid_planner/test/: test_fmp_core_l1.py  test_hybrid_matlab_compat.py  test_intent_biased_rrt_edge_checker.py  test_intent_hybrid_evaluator_utils.py  test_node_helper_behaviors.py
intent_hybrid_runtime_cpp/: CMakeLists.txt  package.xml
intent_hybrid_runtime_cpp/include/intent_hybrid_runtime_cpp/: collision_checker.hpp  intent_rrt_connect.hpp  ompl_rrt_connect.hpp  planner_types.hpp
intent_hybrid_runtime_cpp/src/: collision_checker.cpp  intent_rrt_connect.cpp  intent_runtime_bridge.cpp  ompl_2d_benchmark.cpp  ompl_rrt_connect.cpp
outputs/direct_left_line_smoke/: cart_waypoints.json  direct_dispatch_summary.json  direct_path_debug.json  direct_uv_path.json  ur_move_response.json
outputs/plane_left_safe_middle_obstacles_planonly/: cart_waypoints.json  planning_path_debug.json  result.csv  result.json  scene_obstacles.json  ur_move_response.json
outputs/plane_left_safe_middle_obstacles_planonly_v2/: cart_waypoints.json  planning_path_debug.json  preposition_response.json  result.csv  result.json  scene_obstacles.json
outputs/plane_left_safe_middle_obstacles_planonly_v3/: cart_waypoints.json  planning_path_debug.json  result.csv  result.json  scene_obstacles.json  ur_move_response.json
outputs/plane_matlab_sine_left_execute/: cart_waypoints.json  planning_path_debug.json  preposition_response.json  result.csv  result.json  scene_obstacles.json
outputs/plane_matlab_sine_left_planonly/: cart_waypoints.json  planning_path_debug.json  preposition_response.json  result.csv  result.json  scene_obstacles.json  ur_move_response.json
plane_hybrid_planner/: README.md  __init__.py  evaluate_2d.py  fmp_2d.py  matlab_hybrid_2d.py  matlab_rrt_star_2d.py  obstacle_coordinates.py  path_resample.py  plane_mapping.py  planner_2d.py  requirements.txt  run_algorithm_comparison.py  run_direct_plane_dispatch.py  run_plane_plan.py  scene_sync.py  tool_transform.py  ur_move_zmq_client.py
workspaces/: camera_left.sh  camera_right.sh
workspaces/multibot_ws/dual_arm/dual_arm_config/: CMakeLists.txt  README.md  package.xml
workspaces/multibot_ws/dual_arm/dual_arm_config/config/: initial_positions.yaml  view_robot.rviz
workspaces/multibot_ws/dual_arm/dual_arm_config/description/meshes/body/: body.STL  left_interface_link.STL  right_interface_link.STL
workspaces/multibot_ws/dual_arm/dual_arm_config/description/meshes/camera/: base.STL
workspaces/multibot_ws/dual_arm/dual_arm_config/description/urdf/: dual_arm.urdf.xacro  gripper_ros2_control_2f_85_fixed.xacro
workspaces/multibot_ws/dual_arm/dual_arm_config/description/urdf/arm/: arm.urdf.xacro
workspaces/multibot_ws/dual_arm/dual_arm_config/description/urdf/body/: body.urdf.xacro
workspaces/multibot_ws/dual_arm/dual_arm_config/description/urdf/camera/: camera.urdf.xacro
workspaces/multibot_ws/dual_arm/dual_arm_config/description/urdf/gripper/: gripper.urdf.xacro
workspaces/multibot_ws/dual_arm/dual_arm_config/description/urdf/tools/: drawing_tool.xacro
workspaces/multibot_ws/dual_arm/dual_arm_config/description/urdf/workstation/: workstation.urdf.xacro
workspaces/multibot_ws/dual_arm/dual_arm_config/launch/: control.launch.py  display.launch.py
workspaces/multibot_ws/dual_arm/dual_arm_config/scripts/: README.md  test_arm_control.py  test_gripper_control.py
workspaces/multibot_ws/ur_move/: CMakeLists.txt  README.md  package.xml
workspaces/multibot_ws/ur_move/client/: README.md  trajectory_executor_client.py  zmq_gripper_client.py  zmq_tf_client.py  zmq_ur_move_client.py
workspaces/multibot_ws/ur_move/include/ur_move/: moveit_planner.hpp  trajectory_executor.hpp  trajectory_planner_server.hpp  waypoint_message.hpp
workspaces/multibot_ws/ur_move/launch/: ur_move_planner_server.launch.py  ur_move_server.launch.py
workspaces/multibot_ws/ur_move/src/server_cpp/: moveit_planner.cpp  trajectory_executor.cpp  trajectory_planner_server.cpp  trajectory_planner_server_main.cpp  waypoint_message.cpp
workspaces/multibot_ws/ur_move/src/server_py/: gripper_zmq_server.py  joint_states_zmq_relay.py  tf_zmq_server.py
workspaces/multibot_ws/ur_move/test/: README.md  test_client.py  waypoints.json
(+253 files in other folders)
