<?xml version="1.0"?>
<package format="3">
  <name>intent_hybrid_runtime_cpp</name>
  <version>0.1.0</version>
  <description>C++ runtime bridge for collision/FK/dispatch in hybrid planner.</description>
  <maintainer email="muxi@example.com">muxi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>intent_hybrid_interfaces</depend>
  <depend>ompl</depend>
  <depend>nlohmann_json</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
